project/src/main/antlr4/CalcParser.g4
parser grammar CalcParser;

options { tokenVocab=CalcLexer; }

eval : additionExp;

additionExp : multiplyExp (Add multiplyExp)*
    ;

multiplyExp : atomExp (Mul atomExp)*;

atomExp : Number | LB additionExp RB;
